Update Lib + refacto ouranos-war to ouranos-rest-api